--- a/src/app/feature/pages/home/components/recent-products/recent-products.component.html
+++ b/src/app/feature/pages/home/components/recent-products/recent-products.component.html
@@ -2,7 +2,7 @@
     <div class=" grid  grid-cols-3 lg:grid-cols-6 sm:gap-1 md:gap-4 place-items-center max-w-6xl mx-auto">
         @for(item of products; track $index)
         {
-            <app-product-item [product]="item"></app-product-item>
+            <app-product-item [product]="item" (ProductIdToAddToCartEmitter)="addToCart($event)"></app-product-item>
         }
     </div>
 </div>
