productDetails Cart navigation bug fixed

--- a/src/app/shared/UI/product-details/product-details.component.html
+++ b/src/app/shared/UI/product-details/product-details.component.html
@@ -21,6 +21,6 @@
         <br>
         <h3 class="mt-2 flex align-items-center "><img src="icons/star-solid-full.svg" class=" h-full w-5">{{ product.ratingsAverage }}</h3>
         <h4>[{{product.quantity}}]</h4>
-        <button (click)="AddToCart(product._id)" class="w-full bg-main rounded-lg m-[3px] text-white font-bold hover:bg-maindark" routerLink="/cart">Add to Cart</button>
+        <button (click)="AddToCart(product._id)" class="w-full bg-main rounded-lg m-[3px] text-white font-bold hover:bg-maindark">Add to Cart</button>
     </div>
 </div>
