--- a/src/app/core/notFound/not-found/not-found.component.html
+++ b/src/app/core/notFound/not-found/not-found.component.html
@@ -1,1 +1,8 @@
-<p class="h-[100vh]">not-found works!</p>
+
+    <div class=" h-[100vh] w-screen text-center">
+    <h1 class="font-bold font-4xl">404</h1>
+    <h1 class="font-bold font-4xl">Not Found</h1>
+
+</div>
+
+
