--- a/src/app/feature/pages/cart/cart.component.html
+++ b/src/app/feature/pages/cart/cart.component.html
@@ -1,7 +1,5 @@
-
-
-<div class="relative overflow-x-auto shadow-md sm:rounded-lg h-[100vh]">
-    <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+<div class="relative overflow-x-auto shadow-md sm:rounded-lg h-[100vh] w-screen">
+    <table class="w-screen text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
         <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
             <tr>
                 <th scope="col" class="px-16 py-3">
