--- a/src/app/core/layout/auth/register/register.component.html
+++ b/src/app/core/layout/auth/register/register.component.html
@@ -164,7 +164,7 @@
     </div>
     }
     
-    <button type="submit" routerLink="/LogIn"
+    <button type="submit" 
         class="mb-[200px] text-white bg-main hover:bg-maindark focus:ring-4 focus:outline-none focus:ring-lime-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center">
         @if(IsCallingApi==false)
             {Submit}
