--- a/src/app/core/layout/auth/verify-code/verify-code.component.html
+++ b/src/app/core/layout/auth/verify-code/verify-code.component.html
@@ -1,7 +1,7 @@
 <div class="container flex justify-between gap-4 h-[100vh]">
     <div class="w-full">
         <label for="Code" class="text-main m-3 font-semibold">Code</label>
-        <input id="Code" [(ngModel)]="code" placeholder="Enter Code" class="border-gray-700 border-b-2 p-2 m-2 "/>
+        <input type="text" id="Code" [(ngModel)]="code" placeholder="Enter Code" class="border-gray-700 border-b-2 p-2 m-2 "/>
         <button (click)="sendCode()" class="bg-main hover:bg-maindark p-2 rounded-lg">Send</button>
     </div>
 </div>
