sent code bug fixed

--- a/src/app/core/layout/auth/verify-code/verify-code.component.html
+++ b/src/app/core/layout/auth/verify-code/verify-code.component.html
@@ -1,6 +1,6 @@
 @if(ErrorStatus)
 {
-    <div class="bg-red-500 text-red-800 w-full p-2 m-2" role="alert">Wrong Code</div>
+    <div class="bg-red-100 text-red-800 w-full p-2 m-2 rounded-lg" role="alert">Wrong Code</div>
 }
 <div class="container flex justify-between gap-4 h-[100vh]">
     <div class="w-full">
