--- a/src/app/feature/pages/home/components/main-slider/main-slider.component.html
+++ b/src/app/feature/pages/home/components/main-slider/main-slider.component.html
@@ -1,14 +1,16 @@
-<div class="flex flex-wrap ">
+<div class="flex flex-col md:flex-row w-full gap-2 ">
+  <div class="w-full md:w-9/12">
+        <img src="images/slider-image-1.jpeg"
+             class="h-[400px] w-full object-cover hover:scale-105 transition-transform duration-500"
+             alt="Slide 1">
+  </div>
 
-    <div class="w-9/12 ">
-        <owl-carousel-o [options]="customOptions">
-            <ng-template carouselSlide><img src="images/slider-image-1.jpeg" class="h-[500px] min-w-[300px] hover:scale-105 transition-all duration-500" alt="Slide 1"></ng-template>  
-            <ng-template carouselSlide><img src="images/slider-image-2.jpeg" class="h-[500px] min-w-[300px] hover:scale-105 transition-all duration-500" alt="Slide 2"></ng-template>  
-            <ng-template carouselSlide><img src="images/slider-image-3.jpeg" class="h-[500px] min-w-[300px] hover:scale-105 transition-all duration-500" alt="Slide 3"></ng-template>  
-        </owl-carousel-o>
-    </div>    
-    <div class="w-3/12">
-        <img src="images/grocery-banner.png" class="h-[250px] hover:scale-105 transition-all duration-500" alt="">
-        <img src="images/grocery-banner.png" class="h-[250px] hover:scale-105 transition-all duration-500" alt="">
-    </div>
+  <div class="w-full md:w-3/12 flex flex-col gap-2 overflow-hidden">
+    <img src="images/grocery-banner.png"
+         class="w-full h-[200px] md:h-[195px] object-cover hover:scale-105 transition-transform duration-500"
+         alt="Banner 1">
+    <img src="images/grocery-banner.png"
+         class="w-full h-[200px] md:h-[195px] object-cover hover:scale-105 transition-transform duration-500"
+         alt="Banner 2">
+  </div>
 </div>
