--- a/src/app/core/layout/auth/change-password/change-password.component.html
+++ b/src/app/core/layout/auth/change-password/change-password.component.html
@@ -1,1 +1,112 @@
-<p>change-password works!</p>
+@if(ErrorStatus)
+{
+    <div class="text-red-800 bg-red-50 rounded-md p-2 m-2" role="alert">{{ErrorStatus}}</div>
+}
+
+<h4 class="text-2xl font-bold text-center mb-5 mt-5">Change Password</h4>
+<form class="md:w-screen max-w-md mx-auto" [formGroup]="ChangePassForm" (ngSubmit)="changePass()">
+    @let email= ChangePassForm.get("email");
+    <div class="relative z-0 w-full mb-5 group ">
+        <input formControlName="email" type="email" name="floating_email" id="floating_email"
+            class="block py-2.5 px-0 w-full text-sm text-grey-500 font-semibold bg-transparent border-0 border-b-2 border-gray-700 appearance-none focus:outline-none focus:ring-0 focus:border-main peer"
+            placeholder=" " required />
+        <label for="floating_email"
+            class="peer-focus:font-medium absolute text-lg text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 peer-focus:text-main peer-placeholder-shown:translate-y-0 peer-focus:-translate-y-6">Email
+            address</label>
+    </div>
+    @if(email?.touched && email?.errors )
+    {
+    <div class="flex p-4 mb-3 text-sm text-red-800 rounded-lg bg-red-50" role="alert">
+        <div>
+            <ul class="mt-1.5 list-disc list-inside">
+                @if(email?.getError('required'))
+                {
+                <li>This Field Is Required</li>
+                }
+                @if (email?.getError('email')) {
+                <li>Enter Valid Email Example&#64;xyz.com</li>
+                }
+            </ul>
+        </div>
+    </div>
+    }
+
+    @let pass= ChangePassForm.get('password');
+    <div class="relative z-0 w-full mb-5 group ">
+        <input formControlName="password" [type]="TogglePassFlag? 'text':'password'" name="floating_password" id="floating_password"
+            class="block relative py-2.5 px-0 w-full text-sm text-grey-500 font-semibold bg-transparent border-0 border-b-2 border-gray-700 appearance-none focus:outline-none focus:ring-0 focus:border-main peer"
+            placeholder=" " required />
+        <label for="floating_password"
+            class="peer-focus:font-medium absolute text-lg text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 peer-focus:text-main peer-placeholder-shown:translate-y-0 peer-focus:-translate-y-6">Password</label>
+        @if(!TogglePassFlag)
+            {
+                <img (click)="TogglePassword()" src="icons/eye-solid-full.svg" class="absolute top-[40%] left-[95%] w-[5%] cursor-pointer">
+            }
+            @else {
+                <img (click)="TogglePassword()" src="icons/eye-slash-solid-full.svg" class="absolute top-[40%] left-[95%] w-[5%] cursor-pointer">
+ 
+            }
+        </div>
+    
+    @if(pass?.errors&& pass?.touched )
+    {
+    <div class="flex p-4 mb-3 text-sm text-red-800 rounded-lg bg-red-50" role="alert">
+        <div>
+            <ul class="mt-1.5 list-disc list-inside">
+                @if(pass?.getError('required'))
+                {
+                <li>This Field Is Required</li>
+                }
+                @if (pass?.getError('minlength')) {
+                <li>Your Password should contain at least 6 characters</li>
+                }
+                @if (pass?.getError('pattern')) {
+                <li>Your Password should start with UpperCase [A-Z]</li>
+                }
+            </ul>
+        </div>
+    </div>
+    }
+
+    @let rePass= ChangePassForm.get('rePassword');
+    <div class="relative z-0 w-full mb-5 group ">
+        <input formControlName="rePassword" [type]="ToggleRePassFlag? 'text':'password'" name="floating_repeat_password" id="floating_repeat_password"
+            class="block relative py-2.5 px-0 w-full text-sm text-grey-500 font-semibold bg-transparent border-0 border-b-2 border-gray-700 appearance-none focus:outline-none focus:ring-0 focus:border-main peer"
+            placeholder=" " required />
+        <label for="floating_repeat_password"
+            class="peer-focus:font-medium absolute text-sm text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 peer-focus:text-main peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Confirm
+            password</label>
+        @if(!ToggleRePassFlag)
+            {
+                <img (click)="ToggleRePassword()" src="icons/eye-solid-full.svg" class="absolute top-[40%] left-[95%] w-[5%] cursor-pointer">
+            }
+            @else {
+                <img (click)="ToggleRePassword()" src="icons/eye-slash-solid-full.svg" class="absolute top-[40%] left-[95%] w-[5%] cursor-pointer">
+ 
+            }
+    </div>
+    @if(rePass?.touched &&(rePass?.errors||ChangePassForm.getError('Mismatch')))
+    {
+        <div class="flex p-4 mb-3 text-sm text-red-800 rounded-lg bg-red-50" role="alert">
+            <div>
+                <ul class="mt-1.5 list-disc list-inside">
+                    @if(rePass?.getError('required'))
+                    {
+                    <li>This Field Is Required</li>
+                    }
+                    @if (ChangePassForm?.getError('Mismatch')) {
+                    <li>Not Matched</li>
+                    }
+                </ul>
+            </div>
+        </div>
+    }
+
+<button type="submit" 
+        class="mb-[200px] text-white bg-main hover:bg-maindark focus:ring-4 focus:outline-none focus:ring-lime-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center">
+        @if(IsCallingApi==false)
+            {Submit}
+        @else 
+            {<h6>Loading..</h6>}
+    </button>
+</form>
